Защита личного проекта Седона V2.0

--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
-
   <head>
-    <link rel="icon" href="favicon.ico"> <!-- 32×32 -->
+    <link rel="icon" href="../2198327-sedona-35/images/favicon-32x32.png"  type= "image/png" size  = "32x32" >
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
     <link rel="stylesheet" href="styles/styles.css">
@@ -101,7 +100,6 @@
             <li class="adventures-item advantures-item--olive">
               <div class="adventures-container-center">
                 <h3 class="adventures-title">Красивая дорога</h3>
-
                 <p class="adventures-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
               </div>
             </li>
@@ -123,23 +121,17 @@
           </ul>
           <ul class="adventures-list">
             <li class="advantures-user advantures-user--home">
-
               <h3 class="adventures-user-title">Жильё</h3>
               <p class="adventures-description">Рекомендуем пожить в&nbsp;настоящем мотеле, <br>всё как в кино!</p>
-
             </li>
             <li class="advantures-user advantures-user--food">
-
               <h3 class="adventures-user-title">Еда</h3>
               <p class="adventures-description">Всегда заказывайте<br> топовый фирменный бургер, вы не разочаруетесь!
               </p>
-
             </li>
             <li class="advantures-user advantures-user--gift">
-
               <h3 class="adventures-user-title">Сувениры</h3>
               <p class="adventures-description">Не только китайского,<br> но и настоящего местного производства!</p>
-
             </li>
           </ul>
         </section>
@@ -155,8 +147,7 @@
       <footer class="page-footer">
         <section class="footer-newsletter">
           <h2 class="footer-newsletter-title">Подпишитесь на рассылку</h2>
-          <p class="footer-newsletter-description">Только полезная информация и никакого спама, честное бойскаутское!
-          </p>
+          <p class="footer-newsletter-description">Только полезная информация и никакого спама, честное бойскаутское!</p>
           <div class="subscription-form">
             <form class="mail-address" action="https://echo.htmlacademy.ru/" method="post">
               <label for="appointment-date"></label>
@@ -271,10 +262,11 @@
               </div>
             </div>
             <div class="field-group people-number popover-info">
-              <label class="title-modal-form child-info" for="child-modal-form">Дети:</label>
+              <label class="title-modal-form child-info" for="child-modal-form">Дети:
                 <div class="popover-container">
-                  <a href="#" class="popover-information-link"></a>
+                  <a href="#" class="popover-information-link">
                     <span class="visually-hidden">Показать дополнительную информацию</span>
+                  </a>
                   <div class="popover">
                     <p class="popover-content">
                       Укажите количество детей, которые будут с вами, возраст которых от 6 до 18 лет. Дети до 6 лет
@@ -282,9 +274,11 @@
                     </p>
                   </div>
                 </div>
+              </label>
               <div class="wrapper-number-input">
                 <input class="modal-form-field people-number-input" type="number" id="child-modal-form"
                   name="child-number" placeholder="2">
+
                 <div class="number-controls">
                   <div class="button-people-number-wrapper">
                     <button class="number-button number-less" type="button">
@@ -314,4 +308,5 @@
     </div>
     <script src="./scripts/script.js"></script>
   </body>
+
 </html>
