Защита личного проекта Седона V2.1 (добавил фавикон)

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <link rel="icon" href="../2198327-sedona-35/images/favicon-32x32.png"  type= "image/png" size  = "32x32" >
+    <link rel="icon" href="favicon.ico">
+    <link rel="icon" type="image/png" href="images/favicon.png">
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
     <link rel="stylesheet" href="styles/styles.css">
