--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
   <head>
     <link rel="icon" href="favicon.ico">
-    <link rel="icon" type="image/png" href="images/favicon.png">
+    <link rel="icon" type="image/png" href="./images/favicon.png">
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
     <link rel="stylesheet" href="styles/styles.css">
@@ -54,13 +54,13 @@
             </li>
           </ul>
           <ul class="navigation-user">
-            <li class="navigation-user-list navigation-user--serch">
-              <a class="navigation-user-link" href="#">
+            <li class="navigation-user-list">
+              <a class="navigation-user-link navigation-user--serch" href="#">
                 <span class="visually-hidden">Поиск</span>
               </a>
             </li>
-            <li class="navigation-user-list navigation-user--favorites">
-              <a class="navigation-user-link circle-green" href="#">
+            <li class="navigation-user-list">
+              <a class="navigation-user-link circle-green navigation-user--favorites" href="#">
                 <span class="twelve">12</span>
                 <span class="visually-hidden">Избранное</span>
               </a>
@@ -219,52 +219,46 @@
           <form class="search-modal-form" action="https://echo.htmlacademy.ru/" method="post">
             <div class="field-group">
               <label class="title-modal-form" for="arrival-date-search">Дата заезда:</label>
-              <input class="modal-form-field field" type="text" id="arrival-date-search" name="arrival-date"
-                placeholder="27 апреля 2020">
-              <button type="button" class="calendar">
+              <input class="modal-form-field field" type="text" id="arrival-date-search" name="arrival-date" value="27 апреля 2020" required>
+              <button class="calendar" type="button">
                 <span class="visually-hidden">Календарь для выбора даты заезда.</span>
               </button>
               <span class="suitability-date past-date">Мы не можем отправить вас в прошлое.</span>
             </div>
             <div class="field-group">
               <label class="title-modal-form" for="departure-date-search">Дата выезда:</label>
-              <input class="modal-form-field field" type="text" id="departure-date-search" name="departure-date"
-                placeholder="1 сентября 2023">
+              <input class="modal-form-field field" type="text" id="departure-date-search" name="departure-date" value="1 сентября 2023" required>
               <span class="suitability-date">На эти даты есть свободные номера. Пока есть.</span>
-              <button type="button" class="calendar">
+              <button class="calendar" type="button">
                 <span class="visually-hidden">Календарь для выбора даты заезда.</span>
               </button>
             </div>
             <div class="field-group people-number">
               <label class="title-modal-form" for="adults-modal-form">Взрослые:</label>
               <div class="wrapper-number-input">
-                <input class="modal-form-field people-number-input" type="number" id="adults-modal-form"
-                  name="adults-number" placeholder="2">
-                <div class="number-controls">
-                  <div class="button-people-number-wrapper">
-                    <button class="number-button number-less" type="button">
-                      <svg class="number-button-svg" width="14" height="2" viewBox="0 0 14 2"
-                        xmlns="http://www.w3.org/2000/svg">
-                        <path d="M0 0L0 2L14 2V0L0 0Z" />
-                      </svg>
-                      <span class="visually-hidden">Меньше.</span>
-                    </button>
-                  </div>
-                  <div class="button-people-number-wrapper">
-                    <button class="number-button number-more" type="button">
-                      <svg class="number-button-svg" width="14" height="14" viewBox="0 0 14 14"
-                        xmlns="http://www.w3.org/2000/svg">
-                        <path d="M14 6H8V0H6V6H0V8H6V14H8V8H14V6Z" />
-                      </svg>
-                      <span class="visually-hidden">Больше.</span>
-                    </button>
-                  </div>
+                <input class="modal-form-field people-number-input" type="number" id="adults-modal-form" name="adults-number" placeholder="2" required>
+                <div class="button-people-number-wrapper number-less">
+                  <button class="number-button button-less" type="button">
+                    <svg class="number-button-svg" width="14" height="2" viewBox="0 0 14 2" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M0 0L0 2L14 2V0L0 0Z" />
+                    </svg>
+                    <span class="visually-hidden">Меньше.</span>
+                  </button>
+                </div>
+                <div class="button-people-number-wrapper number-more">
+                  <button class="number-button button-more" type="button">
+                    <svg class="number-button-svg" width="14" height="14" viewBox="0 0 14 14" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M14 6H8V0H6V6H0V8H6V14H8V8H14V6Z" />
+                    </svg>
+                    <span class="visually-hidden">Больше.</span>
+                  </button>
                 </div>
               </div>
             </div>
             <div class="field-group people-number popover-info">
-              <label class="title-modal-form child-info" for="child-modal-form">Дети:
-                <div class="popover-container">
+              <div class="popover-container">
+                <label class="title-modal-form child-info" for="child-modal-form">Дети: </label>
+
                   <a href="#" class="popover-information-link">
                     <span class="visually-hidden">Показать дополнительную информацию</span>
                   </a>
@@ -274,31 +268,25 @@
                       размещаются бесплатно.
                     </p>
                   </div>
-                </div>
-              </label>
+              </div>
               <div class="wrapper-number-input">
-                <input class="modal-form-field people-number-input" type="number" id="child-modal-form"
-                  name="child-number" placeholder="2">
+                <input class="modal-form-field people-number-input" type="number" id="child-modal-form" name="child-number" placeholder="2" required>
 
-                <div class="number-controls">
-                  <div class="button-people-number-wrapper">
-                    <button class="number-button number-less" type="button">
-                      <svg class="number-button-svg" width="14" height="2" viewBox="0 0 14 2"
-                        xmlns="http://www.w3.org/2000/svg">
-                        <path d="M0 0L0 2L14 2V0L0 0Z" />
-                      </svg>
-                      <span class="visually-hidden">Меньше.</span>
-                    </button>
-                  </div>
-                  <div class="button-people-number-wrapper">
-                    <button class="number-button number-more" type="button">
-                      <svg class="number-button-svg" width="14" height="14" viewBox="0 0 14 14"
-                        xmlns="http://www.w3.org/2000/svg">
-                        <path d="M14 6H8V0H6V6H0V8H6V14H8V8H14V6Z" />
-                      </svg>
-                      <span class="visually-hidden">Больше.</span>
-                    </button>
-                  </div>
+                <div class="button-people-number-wrapper number-less">
+                  <button class="number-button button-less" type="button">
+                    <svg class="number-button-svg" width="14" height="2" viewBox="0 0 14 2" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M0 0L0 2L14 2V0L0 0Z" />
+                    </svg>
+                    <span class="visually-hidden">Меньше.</span>
+                  </button>
+                </div>
+                <div class="button-people-number-wrapper number-more">
+                  <button class="number-button button-more" type="button">
+                    <svg class="number-button-svg" width="14" height="14" viewBox="0 0 14 14" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M14 6H8V0H6V6H0V8H6V14H8V8H14V6Z" />
+                    </svg>
+                    <span class="visually-hidden">Больше.</span>
+                  </button>
                 </div>
               </div>
             </div>
@@ -309,5 +297,4 @@
     </div>
     <script src="./scripts/script.js"></script>
   </body>
-
 </html>
