--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <nav class="navigation">
           <ul class="navigation-list">
             <li class="navigation-item">
-              <a class="navigation-link-home " href="home.html">Главная</a>
+              <a class="navigation-link navigation-link-home " href="home.html">Главная</a>
             </li>
             <li class="navigation-item">
               <a class="navigation-link" href="about.html">О Седоне</a>
@@ -121,7 +121,7 @@
             </li>
           </ul>
           <ul class="adventures-list">
-            <li class="advantures-user advantures-user--home">
+            <li class="advantures-user advantures-user--home advantages-user--oliva">
               <h3 class="adventures-user-title">Жильё</h3>
               <p class="adventures-description">Рекомендуем пожить в&nbsp;настоящем мотеле, <br>всё как в кино!</p>
             </li>
@@ -130,7 +130,7 @@
               <p class="adventures-description">Всегда заказывайте<br> топовый фирменный бургер, вы не разочаруетесь!
               </p>
             </li>
-            <li class="advantures-user advantures-user--gift">
+            <li class="advantures-user advantures-user--gift advantages-user--oliva">
               <h3 class="adventures-user-title">Сувениры</h3>
               <p class="adventures-description">Не только китайского,<br> но и настоящего местного производства!</p>
             </li>
@@ -148,7 +148,8 @@
       <footer class="page-footer">
         <section class="footer-newsletter">
           <h2 class="footer-newsletter-title">Подпишитесь на рассылку</h2>
-          <p class="footer-newsletter-description">Только полезная информация и никакого спама, честное бойскаутское!</p>
+          <p class="footer-newsletter-description">Только полезная информация и никакого спама, честное бойскаутское!
+          </p>
           <div class="subscription-form">
             <form class="mail-address" action="https://echo.htmlacademy.ru/" method="post">
               <label for="appointment-date"></label>
@@ -219,7 +220,8 @@
           <form class="search-modal-form" action="https://echo.htmlacademy.ru/" method="post">
             <div class="field-group">
               <label class="title-modal-form" for="arrival-date-search">Дата заезда:</label>
-              <input class="modal-form-field field" type="text" id="arrival-date-search" name="arrival-date" value="27 апреля 2020" required>
+              <input class="modal-form-field field" type="text" id="arrival-date-search" name="arrival-date"
+                value="27 апреля 2020" required>
               <button class="calendar" type="button">
                 <span class="visually-hidden">Календарь для выбора даты заезда.</span>
               </button>
@@ -227,7 +229,8 @@
             </div>
             <div class="field-group">
               <label class="title-modal-form" for="departure-date-search">Дата выезда:</label>
-              <input class="modal-form-field field" type="text" id="departure-date-search" name="departure-date" value="1 сентября 2023" required>
+              <input class="modal-form-field field" type="text" id="departure-date-search" name="departure-date"
+                value="1 сентября 2023" required>
               <span class="suitability-date">На эти даты есть свободные номера. Пока есть.</span>
               <button class="calendar" type="button">
                 <span class="visually-hidden">Календарь для выбора даты заезда.</span>
@@ -236,10 +239,12 @@
             <div class="field-group people-number">
               <label class="title-modal-form" for="adults-modal-form">Взрослые:</label>
               <div class="wrapper-number-input">
-                <input class="modal-form-field people-number-input" type="number" id="adults-modal-form" name="adults-number" placeholder="2" required>
+                <input class="modal-form-field people-number-input" type="number" id="adults-modal-form"
+                  name="adults-number" placeholder="2" required>
                 <div class="button-people-number-wrapper number-less">
                   <button class="number-button button-less" type="button">
-                    <svg class="number-button-svg" width="14" height="2" viewBox="0 0 14 2" xmlns="http://www.w3.org/2000/svg">
+                    <svg class="number-button-svg" width="14" height="2" viewBox="0 0 14 2"
+                      xmlns="http://www.w3.org/2000/svg">
                       <path d="M0 0L0 2L14 2V0L0 0Z" />
                     </svg>
                     <span class="visually-hidden">Меньше.</span>
@@ -247,7 +252,8 @@
                 </div>
                 <div class="button-people-number-wrapper number-more">
                   <button class="number-button button-more" type="button">
-                    <svg class="number-button-svg" width="14" height="14" viewBox="0 0 14 14" xmlns="http://www.w3.org/2000/svg">
+                    <svg class="number-button-svg" width="14" height="14" viewBox="0 0 14 14"
+                      xmlns="http://www.w3.org/2000/svg">
                       <path d="M14 6H8V0H6V6H0V8H6V14H8V8H14V6Z" />
                     </svg>
                     <span class="visually-hidden">Больше.</span>
@@ -258,23 +264,23 @@
             <div class="field-group people-number popover-info">
               <div class="popover-container">
                 <label class="title-modal-form child-info" for="child-modal-form">Дети: </label>
-
-                  <a href="#" class="popover-information-link">
-                    <span class="visually-hidden">Показать дополнительную информацию</span>
-                  </a>
-                  <div class="popover">
-                    <p class="popover-content">
-                      Укажите количество детей, которые будут с вами, возраст которых от 6 до 18 лет. Дети до 6 лет
-                      размещаются бесплатно.
-                    </p>
-                  </div>
+                <a href="#" class="popover-information-link">
+                  <span class="visually-hidden">Показать дополнительную информацию</span>
+                </a>
+                <div class="popover">
+                  <p class="popover-content">
+                    Укажите количество детей, которые будут с вами, возраст которых от 6 до 18 лет. Дети до 6 лет
+                    размещаются бесплатно.
+                  </p>
+                </div>
               </div>
               <div class="wrapper-number-input">
-                <input class="modal-form-field people-number-input" type="number" id="child-modal-form" name="child-number" placeholder="2" required>
-
+                <input class="modal-form-field people-number-input" type="number" id="child-modal-form"
+                  name="child-number" placeholder="2" required>
                 <div class="button-people-number-wrapper number-less">
                   <button class="number-button button-less" type="button">
-                    <svg class="number-button-svg" width="14" height="2" viewBox="0 0 14 2" xmlns="http://www.w3.org/2000/svg">
+                    <svg class="number-button-svg" width="14" height="2" viewBox="0 0 14 2"
+                      xmlns="http://www.w3.org/2000/svg">
                       <path d="M0 0L0 2L14 2V0L0 0Z" />
                     </svg>
                     <span class="visually-hidden">Меньше.</span>
@@ -282,7 +288,8 @@
                 </div>
                 <div class="button-people-number-wrapper number-more">
                   <button class="number-button button-more" type="button">
-                    <svg class="number-button-svg" width="14" height="14" viewBox="0 0 14 14" xmlns="http://www.w3.org/2000/svg">
+                    <svg class="number-button-svg" width="14" height="14" viewBox="0 0 14 14"
+                      xmlns="http://www.w3.org/2000/svg">
                       <path d="M14 6H8V0H6V6H0V8H6V14H8V8H14V6Z" />
                     </svg>
                     <span class="visually-hidden">Больше.</span>
