Защита проекта Седона V4

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <h1 class="visually-hidden">Отели в городе Седона</h1>
         <section class="welcome">
           <h2 class="visually-hidden">Неофциальный</h2>
-          <img class="welcome-img" src="images/welcome.svg" width="458" height="352" alt="добро пожаловать">
+          <img class="welcome-img" src="images/welcome.svg" width="458" height="352" alt="Добро пожаловать.">
         </section>
         <section class="adventures">
           <div class="adventures-city-description">
@@ -89,7 +89,7 @@
                 <p class="adventures-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
               </div>
               <div class="adventures-img-container">
-                <img class="adventures-img" src="images/сity.jpg" width="800" height="384" alt="Фото города">
+                <img class="adventures-img" src="images/сity.jpg" width="800" height="384" alt="Фото города.">
               </div>
             </li>
             <li class="adventures-item advantures-item—square">
@@ -112,7 +112,7 @@
             </li>
             <li class="adventures-item advantures-item--blue">
               <div class="adventures-img-container">
-                <img class="adventures-img" src="images/canyon.jpg" width="800" height="384" alt="Каньон">
+                <img class="adventures-img" src="images/canyon.jpg" width="800" height="384" alt="Каньон.">
               </div>
               <div class="adventures-container">
                 <h3 class="adventures-title">Там есть <br>мост дьявола</h3>
