--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 <p class="adventures-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
               </div>
               <div class="adventures-img-container">
-                <img class="adventures-img" src="images/сity.jpg" width="800" height="384" alt="Фото города.">
+                <img class="adventures-img" src="images/city-img.jpg" width="800" height="384" alt="Фото города.">
               </div>
             </li>
             <li class="adventures-item advantures-item—square">
